# seed-project

./: .gitignore  README.md
.claude/skills/design/: SKILL.md
admin/: README.md  boot.py  main.py  pyproject.toml
admin/views/: __init__.py  dashboard.py  reports.py  revisions.py  shops.py  users.py  varieties.py
apps/seed/: CLAUDE.md  README.md  pubspec.yaml
apps/seed/lib/: config.dart  main.dart  nav.dart
apps/seed/linux/: CMakeLists.txt
apps/seed/test/: widget_test.dart
apps/seed/web/: index.html
apps/shop/: CLAUDE.md  pubspec.yaml
apps/shop/lib/: config.dart  main.dart  nav.dart
apps/shop/linux/: CMakeLists.txt
apps/shop/test/: widget_test.dart
backend/: .env.example  CLAUDE.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/core/: auth.py  config.py  db.py  errors.py
backend/app/models/: __init__.py  dictionary.py  exchange.py  shared.py
backend/app/routers/: articles.py  cart.py  categories.py  editor.py  listings.py  me.py  qr.py  reports.py  requests.py  shop.py  varieties.py
backend/app/schemas/: articles.py  categories.py  listings.py  requests.py  shop.py  varieties.py
backend/app/services/: dictionary.py  images.py  jobs.py  mail.py  moderation.py  variety.py  xlsx.py
backend/db/: schema.sql
backend/deploy/: Caddyfile  RESTORE.md  backup.sh  nftables-seed.conf  pocketbase.service  seed-api.service  seed-jobs.service  seed-jobs.timer  update-cf-ips.sh
backend/scripts/: catalogjson.py  initdb.py  jobs.py  seeddata.py  spdxcheck.py  vegimport.py
backend/tests/: conftest.py  test_articles.py  test_auth.py  test_cart.py  test_categories.py  test_health.py  test_jobs.py  test_listings.py  test_models.py  test_phase5ab.py  test_photos.py  test_requests.py  test_services_admin.py  test_shop.py  test_varieties.py
docs/: contributing-dictionary.md  privacy-draft.md  terms-draft.md
docs/reps/admin-v1/: CLAUDE.md
docs/reps/backend-v1/: LICENSING.md  README.md
docs/reps/kit-v1/: CLAUDE.md  README.md
docs/reps/seed-v1/: CLAUDE.md  (+2 more)
kit/: README.md  catalog.py  forms.py  inventory.py  invoice.py  ledger.py  pamphlet.py  pyproject.toml
kit/templates/: base.html  style.css
kit/tests/: test_catalog.py  test_forms.py  test_inventory.py  test_invoice.py  test_ledger.py  test_pamphlet.py
vegitage-data/: README.md
(+56 files in other folders)
