[project]
name = "seed-backend"
version = "0.1.0"
description = "種の交換アプリ バックエンド(FastAPI)"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
dependencies = [
    "pillow>=10",
    "python-multipart>=0.0.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "ruff", "anyio"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI の Depends/Query は引数デフォルトで使うのが公式の流儀
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.pytest.ini_options]
testpaths = ["tests"]
